@@ -10,6 +10,12 @@ CHANGES
       composite primary key would fail on updates.
       Continuation of [ticket:1300].
     
+    - Fixed an obscure issue whereby a joined-table subclass
+      with a self-referential eager load on the base class
+      would populate the related object's "subclass" table with
+      data from the "subclass" table of the parent.
+      [ticket:1485]
+      
     - relations() now have greater ability to be "overridden",
       meaning a subclass that explicitly specifies a relation()
       overriding that of the parent class will be honored
